# mcp-yandex-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  codex-mcp.example.toml  mcp_yandex_tracker.py  pyproject.toml  run_server.py
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  EXTENDING.md  INTEGRATION.md  README.md  TOOLS.md
tests/: test_client.py  test_server.py
yandex_tracker_mcp_server/: __init__.py  __main__.py  client.py  server.py
