[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-tracker-mcp"
version = "0.1.0"
description = "MCP stdio server for Yandex Tracker"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "snafy" }]
dependencies = ["yandex_tracker_client>=2.10"]

[project.scripts]
yandex-tracker-mcp = "yandex_tracker_mcp_server.__main__:main"

[tool.setuptools.packages.find]
include = ["yandex_tracker_mcp_server*"]
