[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-yandex-tracker"
dynamic = ["version"]
description = "MCP stdio server for Yandex Tracker"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "snafy" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "yandex-tracker", "llm", "agents", "stdio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.28", "yandex_tracker_client>=2.10"]

[project.urls]
Homepage = "https://github.com/kawaii-snafy/mcp-yandex-tracker"
Repository = "https://github.com/kawaii-snafy/mcp-yandex-tracker"
Issues = "https://github.com/kawaii-snafy/mcp-yandex-tracker/issues"

[project.scripts]
mcp-yandex-tracker = "mcp_yandex_tracker:main"

[tool.setuptools]
py-modules = ["mcp_yandex_tracker"]

[tool.setuptools.dynamic]
version = { attr = "mcp_yandex_tracker.__version__" }
